tests/baselines/reference/constructorFunctionTypeIsAssignableToBaseType.errors.txt
constructorFunctionTypeIsAssignableToBaseType.ts(7,7): error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
  The types of 'foo.bar' are incompatible between these types.
    Type 'number' is not assignable to type 'Object'.


==== constructorFunctionTypeIsAssignableToBaseType.ts (1 errors) ====
    class Base {
        static foo: {
            bar: Object;
        }
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
!!! error TS2417:   The types of 'foo.bar' are incompatible between these types.
!!! error TS2417:     Type 'number' is not assignable to type 'Object'.
        // ok
        static foo: {
            bar: number;
        }
    }
    
    class Derived2 extends Base {
        // ok, use assignability here
        static foo: {
            bar: any;
        }
    }